[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/InventorySlot.png" type="Texture" id=2]
[ext_resource path="res://Scripts/InventorySlot.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 3
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PickArea/Collision:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Selected"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.8 ),
"transitions": PoolRealArray( 2, 2, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.3, 1.3 ), Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PickArea/Collision:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.8 ),
"transitions": PoolRealArray( 2, 2, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.7, 0.7 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=4]

[node name="InventorySlot" type="TextureRect"]
margin_left = 1.0
margin_right = 33.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 16, 16 )
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="ItemIcon" type="Sprite" parent="."]
position = Vector2( 16, 16 )

[node name="ItemQuantity" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -5.0
margin_top = -23.0
margin_right = -3.0
margin_bottom = -20.0
rect_scale = Vector2( 5, 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="Animations" type="AnimationPlayer" parent="."]
autoplay = "Selected"
anims/RESET = SubResource( 2 )
anims/Selected = SubResource( 3 )

[node name="PickArea" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="PickArea"]
position = Vector2( 16, 16 )
shape = SubResource( 4 )
